@@ -833,6 +833,7 @@ Julia Lawall
 Chris Lawrence
 Mark Lawrence
 Chris Laws
+Michael Lazar
 Brian Leair
 Mathieu Leduc-Hamel
 Amandine Lee
